<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright © 2020 TomTom NV. All rights reserved.
  ~
  ~ This software is the proprietary copyright of TomTom NV and its subsidiaries and may be
  ~ used for internal evaluation purposes or commercial use strictly subject to separate
  ~ license agreement between you and TomTom NV. If you are the licensee, you are only permitted
  ~ to use this software in accordance with the terms of your license agreement. If you are
  ~ not the licensee, you are not authorized to use this software in any manner and should
  ~ immediately return or destroy it.
  -->

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:auto="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.tomtom.ivi.example.frontend.account.login.AccountLoginViewModel" />
    </data>


    <LinearLayout
        android:id="@+id/frontend_account_login_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="?attr/tt_spacing_xl"
        android:layout_marginVertical="?attr/tt_spacing_xl"
        android:orientation="vertical"
        tools:layout_marginHorizontal="40dp">

        <com.tomtom.tools.android.api.uicontrols.textview.TtTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/frontend_account_login_title"
            android:textAlignment="textStart"
            android:textColor="?attr/tt_color_text_primary"
            auto:ttTextAppearance="h3"
            auto:ttTextWeight="bold"
            tools:text="@string/frontend_account_login_title" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="?attr/tt_spacing_l"
            tools:layout_height="32dp" />

        <com.tomtom.tools.android.api.uicontrols.textview.TtTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="start"
            android:text="@string/frontend_account_login_message"
            android:textAlignment="textStart"
            android:textColor="?attr/tt_color_text_secondary"
            auto:ttTextAppearance="h4"
            auto:ttTextWeight="medium"
            tools:text="@string/frontend_account_login_message" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="?attr/tt_spacing_xs"
            tools:layout_height="16dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="?attr/ttivi_size_horizontal_layout_divider_height"
            android:background="?attr/tt_color_separation_line"
            tools:layout_height="2dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="?attr/tt_spacing_l"
            tools:layout_height="32dp" />

        <com.tomtom.tools.android.api.uicontrols.textview.TtTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="?attr/tt_spacing_xxs"
            android:gravity="start"
            android:labelFor="@id/frontend_account_login_screen_login_username_edit"
            android:text="@string/frontend_account_login_username"
            android:textAlignment="textStart"
            android:textColor="?attr/tt_color_text_secondary"
            auto:ttTextAppearance="h4"
            auto:ttTextWeight="medium"
            tools:text="@string/frontend_account_login_username" />

        <EditText
            android:id="@+id/frontend_account_login_screen_login_username_edit"
            android:layout_width="match_parent"
            android:layout_height="?attr/tt_size_default_button_height"
            android:autofillHints="textPersonName"
            android:background="@drawable/frontend_account_round_corners"
            android:importantForAutofill="yes"
            android:inputType="textPersonName|textAutoComplete"
            android:paddingHorizontal="?attr/tt_spacing_l"
            android:singleLine="true"
            android:text="@={viewModel.username}"
            android:textColor="?attr/tt_color_text_primary"
            android:textSize="?attr/tt_text_size_h2" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="?attr/tt_spacing_l"
            tools:layout_height="32dp" />

        <com.tomtom.tools.android.api.uicontrols.textview.TtTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="?attr/tt_spacing_xxs"
            android:gravity="start"
            android:labelFor="@id/frontend_account_login_screen_login_password_edit"
            android:text="@string/frontend_account_login_password"
            android:textAlignment="textStart"
            android:textColor="?attr/tt_color_text_secondary"
            auto:ttTextAppearance="h4"
            auto:ttTextWeight="medium"
            tools:text="@string/frontend_account_login_password" />

        <EditText
            android:id="@+id/frontend_account_login_screen_login_password_edit"
            android:layout_width="match_parent"
            android:layout_height="?attr/tt_size_default_button_height"
            android:autofillHints="textPassword"
            android:background="@drawable/frontend_account_round_corners"
            android:importantForAutofill="yes"
            android:inputType="textNoSuggestions|text|textPassword|textAutoComplete"
            android:paddingHorizontal="?attr/tt_spacing_l"
            android:singleLine="true"
            android:text="@={viewModel.password}"
            android:textColor="?attr/tt_color_text_primary"
            android:textSize="?attr/tt_text_size_h2" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="?attr/tt_spacing_l"
            tools:layout_height="64dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="?attr/ttivi_size_horizontal_layout_divider_height"
            android:background="?attr/tt_color_separation_line"
            tools:layout_height="2dp" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="?attr/tt_spacing_l" />

        <com.tomtom.tools.android.api.uicontrols.button.TtButton
            style="?attr/tt_button_style"
            android:layout_width="match_parent"
            android:enabled="@{viewModel.isLoginEnabled}"
            android:onClick="@{() -> viewModel.onLoginClick()}"
            android:text="@string/frontend_account_login_button_text"
            auto:ttActionType="primary" />
    </LinearLayout>

</layout>
